build views / add css

--- a/app/views/proofs/index.html.erb
+++ b/app/views/proofs/index.html.erb
@@ -1,9 +1,8 @@
-<h1>Array Intersection Proof</h1>
-<p>A simple proof to illustrate the performance difference between iteration and a hash when finding the intersection between two arrays.</p>
 
-<h3>please input a whole number - the larger the better.</h3>
+
+<h3>please input a whole number between 500 and 10000.</h3>
 
 <form class="" action="/proofs/execute" method="get">
-  <input type="number" name="input_num">
+  <input type="number" name="input_num" min="500" max="10000" >
   <input type="submit" name="" value="submit">
 </form>
