rename images to distinguish from methods

--- a/app/views/proofs/execute.html.erb
+++ b/app/views/proofs/execute.html.erb
@@ -12,7 +12,7 @@
     </div>
     <div class="col span-5-t span-4-d">
       <div class="image">
-        <%= image_tag "make_arrays_image", width: "290" %>
+        <!-- <%= image_tag "make_arrays_image", width: "290" %> -->
       </div>
     </div>
   </div>
