image_tag syntax fix

--- a/app/views/proofs/execute.html.erb
+++ b/app/views/proofs/execute.html.erb
@@ -12,7 +12,7 @@
     </div>
     <div class="col span-5-t span-4-d">
       <div class="image">
-        <%= image_tag("make_arrays_image", width: "290") %>
+        <%= image_tag("arrays.png", width: "290") %>
       </div>
     </div>
   </div>
@@ -29,7 +29,7 @@
     </div>
     <div class="col span-5-t span-4-d">
       <div class="image">
-        <%= image_tag("iteration_intersection_image", width: "290") %>
+        <%= image_tag("iteration.png", width: "290") %>
       </div>
     </div>
   </div>
@@ -47,7 +47,7 @@
   </div>
   <div class="col span-5-t span-4-d">
     <div class="image">
-      <%= image_tag("hash_intersection_image", width: "290") %>
+      <%= image_tag("hash.png", width: "290") %>
     </div>
   </div>
 </div>
