--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,4 +1,4 @@
   <div class="header">
-    <h1>Array Intersection Proof</h1>
+    <h1> <%= link_to("Array Intersection Proof", root_path) %> </h1>
     <p>A simple proof to illustrate the performance difference between iteration and a hash when finding the intersection between two arrays.</p>
   </div>
